// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakpoints should add a breakpoint 1`] = `
Array [
  Object {
    "breakpoints": Array [
      Object {
        "disabled": false,
        "generatedLocation": Object {
          "column": 1,
          "line": 2,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "",
              "filename": "a",
              "group": "localhost:8000",
              "path": "/examples/a",
              "search": "",
            },
            "extensionName": null,
            "id": "a",
            "isExtension": false,
            "isHTML": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "url": "http://localhost:8000/examples/a",
          },
          "sourceActor": null,
          "sourceActorId": undefined,
        },
        "id": "a:2:1",
        "location": Object {
          "column": 1,
          "line": 2,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "",
              "filename": "a",
              "group": "localhost:8000",
              "path": "/examples/a",
              "search": "",
            },
            "extensionName": null,
            "id": "a",
            "isExtension": false,
            "isHTML": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "url": "http://localhost:8000/examples/a",
          },
          "sourceActor": null,
          "sourceActorId": undefined,
        },
        "options": Object {},
        "originalText": "return a",
        "text": "return a",
        "thread": undefined,
      },
    ],
    "filename": "a",
    "source": Object {
      "displayURL": Object {
        "fileExtension": "",
        "filename": "a",
        "group": "localhost:8000",
        "path": "/examples/a",
        "search": "",
      },
      "extensionName": null,
      "id": "a",
      "isExtension": false,
      "isHTML": false,
      "isOriginal": false,
      "isPrettyPrinted": false,
      "isWasm": false,
      "url": "http://localhost:8000/examples/a",
    },
  },
]
`;

exports[`breakpoints should not show a breakpoint that does not have text 1`] = `Array []`;

exports[`breakpoints should show a disabled breakpoint that does not have text 1`] = `
Array [
  Object {
    "breakpoints": Array [
      Object {
        "disabled": true,
        "generatedLocation": Object {
          "column": 1,
          "line": 5,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "",
              "filename": "a",
              "group": "localhost:8000",
              "path": "/examples/a",
              "search": "",
            },
            "extensionName": null,
            "id": "a",
            "isExtension": false,
            "isHTML": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "url": "http://localhost:8000/examples/a",
          },
          "sourceActor": null,
          "sourceActorId": undefined,
        },
        "id": "a:5:1",
        "location": Object {
          "column": 1,
          "line": 5,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "",
              "filename": "a",
              "group": "localhost:8000",
              "path": "/examples/a",
              "search": "",
            },
            "extensionName": null,
            "id": "a",
            "isExtension": false,
            "isHTML": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "url": "http://localhost:8000/examples/a",
          },
          "sourceActor": null,
          "sourceActorId": undefined,
        },
        "options": Object {},
        "originalText": "",
        "text": "",
        "thread": undefined,
      },
    ],
    "filename": "a",
    "source": Object {
      "displayURL": Object {
        "fileExtension": "",
        "filename": "a",
        "group": "localhost:8000",
        "path": "/examples/a",
        "search": "",
      },
      "extensionName": null,
      "id": "a",
      "isExtension": false,
      "isHTML": false,
      "isOriginal": false,
      "isPrettyPrinted": false,
      "isWasm": false,
      "url": "http://localhost:8000/examples/a",
    },
  },
]
`;
